maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:7: error: type mismatch;
 found   : Unit
 required: Boolean
if (entier=0)
          ^RandomMouseMaze:11: error: type mismatch;
 found   : Unit
 required: Boolean
if (entier=1)
          ^RandomMouseMaze:15: error: type mismatch;
 found   : Unit
 required: Boolean
else if (entier=2)
               ^