maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
var entier =0 
while(!estSurBiscuit)
{
entier = random3(); 
if (entier=0)
{
avance();
}
if (entier=1)
{
	droite();
}
else if (entier=2)
{
 gauche();	
}
}
}